tests/build/cases/property/defaults.stderr
error: expected `default("arg1", ..)` or `default(arg1: "arg1", ..)`
 --> cases/property/defaults.rs:3:21
  |
3 | #[property(context, default)]
  |                     ^^^^^^^

error: expected `default("arg1", ..)` or `default(arg1: "arg1", ..)`
 --> cases/property/defaults.rs:9:28
  |
9 | #[property(context, default())]
  |                            ^^

error: missing field `b` in property initializer
  --> cases/property/defaults.rs:21:28
   |
21 | #[property(context, default(a: true))]
   |                            ^^^^^^^^^

error: unknown field `c`
  --> cases/property/defaults.rs:33:47
   |
33 | #[property(context, default(a: true, b: 2555, c: "ABC"))]
   |                                               ^

error[E0061]: this function takes 2 arguments but 1 argument was supplied
  --> cases/property/defaults.rs:15:28
   |
15 | #[property(context, default(true))]
   |                            ^----^
   |                            ||
   |                            |supplied 1 argument
   |                            expected 2 arguments
   |
note: associated function defined here
  --> cases/property/defaults.rs:15:1
   |
15 | #[property(context, default(true))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0061]: this function takes 2 arguments but 3 arguments were supplied
  --> cases/property/defaults.rs:27:28
   |
27 | #[property(context, default(true, 2555, "ABC"))]
   |                            ^----^^----^^-----^
   |                            |            |
   |                            |            supplied 3 arguments
   |                            expected 2 arguments
   |
note: associated function defined here
  --> cases/property/defaults.rs:27:1
   |
27 | #[property(context, default(true, 2555, "ABC"))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `{integer}: IntoVar<bool>` is not satisfied
  --> cases/property/defaults.rs:39:29
   |
39 | #[property(context, default(2555, true))]
   |                            -^^^^-------
   |                            ||
   |                            |the trait `IntoVar<bool>` is not implemented for `{integer}`
   |                            required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <f32 as IntoVar<CornerRadius>>
             <f32 as IntoVar<Factor>>
             <f32 as IntoVar<GridSpacing>>
             <f32 as IntoVar<SideOffsets>>
           and 19 others
note: required by a bound in `invalid_default_args_types_u_2_ArgsImpl::<T_a, T_b>::new`
  --> cases/property/defaults.rs:40:67
   |
39 | #[property(context, default(2555, true))]
   | ----------------------------------------- required by a bound in this
40 | pub fn invalid_default_args_types_u_2(child: impl UiNode, a: impl IntoVar<bool>, b: impl IntoVar<u32>) -> impl UiNode {
   |                                                                   ^^^^^^^^^^^^^ required by this bound in `invalid_default_args_types_u_2_ArgsImpl::<T_a, T_b>::new`

error[E0277]: the trait bound `bool: IntoVar<u32>` is not satisfied
  --> cases/property/defaults.rs:39:35
   |
39 | #[property(context, default(2555, true))]
   |                            -------^^^^-
   |                            |      |
   |                            |      the trait `IntoVar<u32>` is not implemented for `bool`
   |                            required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <bool as IntoVar<AutoSize>>
             <bool as IntoVar<CaptureMode>>
             <bool as IntoVar<Factor>>
             <bool as IntoVar<FontFeatureState>>
           and 8 others
note: required by a bound in `invalid_default_args_types_u_2_ArgsImpl::<T_a, T_b>::new`
  --> cases/property/defaults.rs:40:90
   |
39 | #[property(context, default(2555, true))]
   | ----------------------------------------- required by a bound in this
40 | pub fn invalid_default_args_types_u_2(child: impl UiNode, a: impl IntoVar<bool>, b: impl IntoVar<u32>) -> impl UiNode {
   |                                                                                          ^^^^^^^^^^^^ required by this bound in `invalid_default_args_types_u_2_ArgsImpl::<T_a, T_b>::new`

error[E0277]: the trait bound `{integer}: IntoVar<bool>` is not satisfied
  --> cases/property/defaults.rs:45:32
   |
45 | #[property(context, default(a: 2555, b: true))]
   |                            ----^^^^----------
   |                            |   |
   |                            |   the trait `IntoVar<bool>` is not implemented for `{integer}`
   |                            required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <f32 as IntoVar<CornerRadius>>
             <f32 as IntoVar<Factor>>
             <f32 as IntoVar<GridSpacing>>
             <f32 as IntoVar<SideOffsets>>
           and 19 others
note: required by a bound in `invalid_default_args_types_n_2_ArgsImpl::<T_a, T_b>::new`
  --> cases/property/defaults.rs:46:67
   |
45 | #[property(context, default(a: 2555, b: true))]
   | ----------------------------------------------- required by a bound in this
46 | pub fn invalid_default_args_types_n_2(child: impl UiNode, a: impl IntoVar<bool>, b: impl IntoVar<u32>) -> impl UiNode {
   |                                                                   ^^^^^^^^^^^^^ required by this bound in `invalid_default_args_types_n_2_ArgsImpl::<T_a, T_b>::new`

error[E0277]: the trait bound `bool: IntoVar<u32>` is not satisfied
  --> cases/property/defaults.rs:45:41
   |
45 | #[property(context, default(a: 2555, b: true))]
   |                            -------------^^^^-
   |                            |            |
   |                            |            the trait `IntoVar<u32>` is not implemented for `bool`
   |                            required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <bool as IntoVar<AutoSize>>
             <bool as IntoVar<CaptureMode>>
             <bool as IntoVar<Factor>>
             <bool as IntoVar<FontFeatureState>>
           and 8 others
note: required by a bound in `invalid_default_args_types_n_2_ArgsImpl::<T_a, T_b>::new`
  --> cases/property/defaults.rs:46:90
   |
45 | #[property(context, default(a: 2555, b: true))]
   | ----------------------------------------------- required by a bound in this
46 | pub fn invalid_default_args_types_n_2(child: impl UiNode, a: impl IntoVar<bool>, b: impl IntoVar<u32>) -> impl UiNode {
   |                                                                                          ^^^^^^^^^^^^ required by this bound in `invalid_default_args_types_n_2_ArgsImpl::<T_a, T_b>::new`
